chore: extract CommandLineArgumentParser from spring